added expanding text component

--- a/src/index.css
+++ b/src/index.css
@@ -346,6 +346,10 @@ body {
   justify-content: center;
 }
 
+.line-line {
+  display: flex;
+}
+
 /*
 SPACING SYSTEM (px)
 2 / 4 / 8 / 12 / 16 / 24 / 32 / 40 / 48 / 64 / 80 / 96 / 128
